# orb-browser

./: .gitignore  CLAUDE.md  README.md  agent.py  demo.mjs  demo.tape  learnings.txt  orb-agent.toml  orb.toml  package.json  pyproject.toml  server.js  start.sh
.claude-plugin/: plugin.json
examples/: agent_simple.py  manual_login.py
orb_browser/: __init__.py  browser.py  cli.py  client.py
sdk/: index.js
skills/browser/: SKILL.md
skills/browser/examples/: browse-hn.sh  scheduled-monitor.sh  twitter-watcher.sh
skills/browser/references/: api-reference.md  cookie-export.md  patterns.md
test/: e2e.sh
